--- a/index/index.html
+++ b/index/index.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio Origamid</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/77128-emoticon-whatsapp-android-emoji-png-image-high-quality.png">
 </head>
 
 <body>
     
-    <h1>teste de carro</h1>
-    <h1>teste de carro</h1>
-    <h1>teste de carro</h1>
+    <h1 id="frase1">teste de carro</h1>
+    <h1><a href="./produtos/bike.html">Bike</a></h1>
+    <h1><a href="./produtos/carro.html">Carro</a></h1>
+
+    <h2 class="teste">Teste novo</h2>
+    <h2 class="teste">Teste novo</h2>
+    <h2 class="teste">Teste novo</h2>
+
+   
 </body>
 
 </html>
