--- a/index/exercicios/exercicio06colunas e quadrados/index.html
+++ b/index/exercicios/exercicio06colunas e quadrados/index.html
@@ -4,38 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Momentos memoráveis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Momentos memoráveis nossos</h1>
+
+  <div class="grid">
   <div class="item"> 
     <h2>Parque witteck</h2>
     <p class="preco">12/12/202</p>
     <p>Momento super lindo perfeito</p>
     <a href="">Peitos</a>
+    </div>
 
     <div class="item"> 
       <h2>Zoologico</h2>
       <p class="preco">12/12/2023</p>
       <p>Momento super lindo perfeito</p>
-      <a href="">Peitos</a>
-
+      <a class="peitos" a href="">Peitos</a></a>
+    </div>
       <div class="item"> 
         <h2>Speto</h2>
         <p class="preco">12/12/2023</p>
         <p>Momento super lindo perfeito</p>
         <a href="">Peitos</a>
-
+      </div>
         <div class="item"> 
           <h2>Prainha</h2>
           <p class="preco">12/12/2023</p>
           <p>Momento super lindo perfeito</p>
           <a href="">Peitos</a>
-
+        </div>
           <div class="item"> 
             <h2>Cinema</h2>
             <p class="preco">12/12/2023</p>
             <p>Momento super lindo perfeito</p>
             <a href="">Peitos</a>
+          </div>
   </div>
 
   
