aprendendo caixas e flex html

--- a/index/exercicios/exercicio06colunas e quadrados/index.html
+++ b/index/exercicios/exercicio06colunas e quadrados/index.html
@@ -41,6 +41,18 @@
             <p>Momento super lindo perfeito</p>
             <a href="">Peitos</a>
           </div>
+          <div class="item"> 
+            <h2>Parque2</h2>
+            <p class="preco">12/12/2023</p>
+            <p>Momento super lindo perfeito memoral de todos temposo</p>
+            <a href="">Peitos</a>
+          </div>
+            <div class="item"> 
+              <h2>parque1</h2>
+              <p class="preco">12/12/2023</p>
+              <p>Momento super lindo perfeioaaaa</p>
+              <a href="">Peitos</a>
+            </div>
   </div>
 
   
