--- a/index/exercicios/exercicio08/posicionamento.html
+++ b/index/exercicios/exercicio08/posicionamento.html
@@ -4,8 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Posicionamento</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="pos/img/bicicleta.jpg" type="image/x-icon">
 </head>
 <body>
-  
+  <img class="h1bik" src="pos/img/bikcraft.svg" alt="bikcraft">
+
+  <div class="menu">
+    <a href="">Sobre</a></h2>
+    <a href="">Produtos</a>
+    <a href="">Lojas</a>
+    <a href="">Contato</a>
+  </div>
+
+
+    <div class="conteudo">
+      <div class="introducao">
+        <span class="detalhe"></span>
+        <h1>Bicicletas Feitas a Mão</h1>
+        <p>A nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <a class ="botao">ver mais</a>
+      </div>
+
+
+     <img src="pos/img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+
+      <h2 class="subtitulo">Vantagens Bikcraft</h2>
+      <div class="vantagens">
+        <div class="vantagens-item">
+          <img src="pos/img/eletrica.svg" alt="">
+          <h3>Motor Elétrico</h3>
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+        </div>
+        
+
+        <div class="vantagens-item">
+          <img src="pos/img/velocidade.svg" alt="">
+          <h3>40 km/h</h3>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </div>
+        <div class="vantagens-item">
+          <img src="pos/img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </div>
+      </div>
+    </div>
+      <div class="rodape">
+        <p>Bikcraft. Alguns direitos Reservados.</p>
+      </div>
+      
 </body>
 </html>
