--- a/index/exercicios/exercicio08/posicionamento.html
+++ b/index/exercicios/exercicio08/posicionamento.html
@@ -8,51 +8,57 @@
   <link rel="shortcut icon" href="pos/img/bicicleta.jpg" type="image/x-icon">
 </head>
 <body>
-  <img class="h1bik" src="pos/img/bikcraft.svg" alt="bikcraft">
 
-  <div class="menu">
-    <a href="">Sobre</a></h2>
-    <a href="">Produtos</a>
-    <a href="">Lojas</a>
-    <a href="">Contato</a>
-  </div>
+  <header class="menui">
+    <img class="h1bik" src="pos/img/bikcraft.svg" alt="bikcraft">
+    <nav aria-label="primária">
+      <ul class="menu">
+        <li><a href="">Sobre</a></li>
+        <li><a href="">Produtos</a></li>
+        <li><a href="">Lojas</a></li>
+        <li><a href="">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
 
-    <div class="conteudo">
-      <div class="introducao">
+    <main>
+      <article class="conteudo">
+      <div class="introducao" aria-labelledby="label-introducao">
         <span class="detalhe"></span>
-        <h1>Bicicletas Feitas a Mão</h1>
+        <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
         <p>A nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class ="botao">ver mais</a>
       </div>
-
-
      <img src="pos/img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+    </article>
 
-      <h2 class="subtitulo">Vantagens Bikcraft</h2>
-      <div class="vantagens">
-        <div class="vantagens-item">
+    <article class="conteudo" aria-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+      <ul class="vantagens">
+        <li class="vantagens-item">
           <img src="pos/img/eletrica.svg" alt="">
           <h3>Motor Elétrico</h3>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-        </div>
+        </li>
         
 
-        <div class="vantagens-item">
+        <li class="vantagens-item">
           <img src="pos/img/velocidade.svg" alt="">
           <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-        </div>
-        <div class="vantagens-item">
+        </li>
+        <li class="vantagens-item">
           <img src="pos/img/rastreador.svg" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-        </div>
-      </div>
-    </div>
-      <div class="rodape">
+        </li>
+      </ul>
+    </article>
+    </main>
+      <footer class="rodape">
         <p>Bikcraft. Alguns direitos Reservados.</p>
-      </div>
+      </footer>
       
 </body>
 </html>
