--- a/index/exercicios/exercicio08/posicionamento.html
+++ b/index/exercicios/exercicio08/posicionamento.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Posicionamento</title>
+  <title>Bikcraft</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="pos/img/bicicleta.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="img/icon bike" type="image/x-icon">
 </head>
 <body>
 
@@ -25,7 +25,6 @@
     <main>
       <article class="conteudo">
       <div class="introducao" aria-labelledby="label-introducao">
-        <span class="detalhe"></span>
         <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
         <p>A nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class ="botao">ver mais</a>
