--- a/exercicio08S/posicionamento.html
+++ b/exercicio08S/posicionamento.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft</title>
-  <link rel="stylesheet" href="style.min.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/icon bike" type="image/x-icon">
 </head>
 
