Exercícios envolvendo JS

--- a/index/exercicios/exercicioJS copy/produto.html
+++ b/index/exercicios/exercicioJS copy/produto.html
@@ -12,8 +12,9 @@
       <li><a href="./">Home</a></li>
       <li><a href="./produto.html">Produto</a></li>
       <li><a href="./contato.html">Contato</a></li>
+      <p>funcionou2</p>
     </ul>
   </nav>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
