--- a/Javascript-Curso/variaveis/index copy.html
+++ b/Javascript-Curso/variaveis/index copy.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="script.js">
+  <script src="script copy.js">
  </script>
 </body>
 </html>
