--- a/animais-fantasticos/index.html
+++ b/animais-fantasticos/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animais Fantásticos</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -20,7 +24,7 @@
 
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
-    <ul>
+    <ul class="animais-lista">
       <li>
         <img src="img/imagem1.jpg">
       </li>
@@ -87,24 +91,23 @@
   </section>
 
   <section class="grid-section faq" id="faq">
-    <h1>FAQ</h1>
-    <dl>
+    <h1 class="titulo">FAQ</h1>
+    <dl class="faq-lista">
+      <dt>Qual a idade dos Animais?</dt>
+      <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
+
+      <dt>Qual a idade dos Animais?</dt>
+      <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
+
+      <dt>Qual a idade dos Animais?</dt>
+      <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
       <dt>Qual a idade dos Animais?</dt>
       <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
     </dl>
-    <dt>Qual a idade dos Animais?</dt>
-    <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
-    </dl>
-    <dt>Qual a idade dos Animais?</dt>
-    <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
-    </dl>
-    <dt>Qual a idade dos Animais?</dt>
-    <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
-    </dl>
   </section>
 
-  <section class="grid-section-contato" id="contato">
-    <h1>Contato</h1>
+  <section class="grid-section contato" id="contato">
+    <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png" alt="">
     </div>
@@ -119,9 +122,6 @@
   <footer class="copy">
     <p>Todos direitos reservados</p>
   </footer>
-
-
-
 
   <script src="script.js"></script>
 </body>
