--- a/Javascript-Curso/parte 1/parte1/nav-tab/index.html
+++ b/Javascript-Curso/parte 1/parte1/nav-tab/index.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script>
+    document.documentElement.className += ' js';
+  </script>
 </head>
 
 <body>
