--- a/Javascript-Curso/parte 1/parte1/nav-tab/index.html
+++ b/Javascript-Curso/parte 1/parte1/nav-tab/index.html
@@ -93,7 +93,7 @@
 
   <section class="grid-section faq" id="faq">
     <h1 class="titulo">FAQ</h1>
-    <dl class="faq-lista">
+    <dl class="faq-lista js-accordion">
       <dt>Qual a idade dos Animais?</dt>
       <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ratione voluptatibus cupiditate alias incidunt molestias.</dd>
 
