--- a/Javascript-Curso/parte 2 dom/site3-formulkario/index.html
+++ b/Javascript-Curso/parte 2 dom/site3-formulkario/index.html
@@ -34,28 +34,37 @@
   textarea {
     height: 150px;
   }
+
+  .invalido {
+    border-color: red;
+  }
 </style>
 
 <body>
   <form name="contato" id="contato">
 
     <label for="nome">Nome</label>
-    <input type="text" name="nome" id="nome" value="seunome">
+    <input type="text" name="nome" id="nome" required>
+    <span class="erro"></span>
     <label for="email">Email</label>
-    <input type="text" name="email" id="email">
+    <input type="email" name="email" id="email" required>
+    <span class="erro"></span>
     <label for="mensagem">Mensagem</label>
     <textarea name="mensagem" id="mensagem"></textarea>
-
+    <select name="cores" id="cores">
+      <option value="blue">Azul</option>
+      <option value="red">Vermelho</option>
   </form>
+  <span class="texto"></span>
   <script>
     const contato = document.querySelector('#contato');
-    const texto = document.querySelector('.texto');
-    function handleKeyUp(event) {
-      console.log(event.target.value);
-      texto.innerText = event.target.value;
+    const dados = {};
+    function handleChange(event) {
+      dados[event.target.name] = event.target.value;
+      console.log(dados);
     }
 
-    contato.addEventListener('change', handleKeyUp);
+    contato.addEventListener('change', handleChange);
   </script>
 </body>
 
