--- a/Javascript-Curso/button-creator/index.html
+++ b/Javascript-Curso/button-creator/index.html
@@ -34,9 +34,7 @@
     </form>
     <section class="resultado">
       <button class="btn">Clique</button>
-      <pre><code class="css">
-        <span>background-color: blue;</span>
-      </code></pre>
+      <pre><code class="css"></code></pre>
     </section>
   </section>
 
