--- a/Javascript-Curso/JS-Assincrono/fetch/index.html
+++ b/Javascript-Curso/JS-Assincrono/fetch/index.html
@@ -6,7 +6,34 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="conteudo"></div>
+  <style>
+    label {
+      display: block;
+    }
+    input {
+      display: block;
+    }
+  </style>
+
+
+  <form id="buscaCep">
+    <label for="cep">CEP</label>
+    <input type="text" name="cep" id="cep">
+    <input type="button" value="Buscar Cep" id="btnCep">
+  </form>
+<div class="resultadoCep">
+
+</div>
+<div>
+  <h2>Preço BTC - USDT</h2>
+  <p class="btc"></p>
+</div>
+
+<div>
+  <p class="piada"> </p>
+    <button class="proxima">Proxima</button>
+</div>
+
 
 
   <script src="script.js"></script>
